# baas_backup_util

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
baas_backup_util/: CMakeLists.txt
baas_backup_util/include/: argparse.h  config.h  logger.h  zip_runner.h
baas_backup_util/src/: argparse.cpp  config.cpp  main.cpp
docs/: ConfigurationParsing.md  example-configuration.json
